# hume-voice-demo

./: .gitignore  README.md  bookmarks_analysis.csv
.cursor/rules/: coding-standards.mdc  project-context.mdc  user-preferences.mdc
cli/: Makefile  README.md  USAGE.md  __init__.py  audio_config.py  audio_handler.py  cli.py  config.py  conversation_manager.py  database.py  evi_client.py  pyproject.toml  requirements.txt  verify_setup.py
docs/: GRAPH_EXTRACTION_EXAMPLE.md  MEMGRAPH_INTEGRATION.md
web/: .dockerignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  nginx.conf
web/backend/: go.mod  go.sum
web/backend/cmd/server/: main.go
web/backend/internal/api/: auth_handler.go  context_handler.go  conversation_handler.go  graph_handler.go  message_handler.go  middleware.go  server.go  user_handler.go  voice_handler.go
web/backend/internal/auth/: auth.go
web/backend/internal/config/: config.go
web/backend/internal/db/: db.go  models.go
web/backend/internal/db/migrations/: 001_initial.sql  002_add_is_admin.sql
web/backend/internal/graph/: client.go  knowledge.go
web/backend/internal/websocket/: client.go  hub.go
web/frontend/: .dockerignore  index.html  package.json  vite.config.ts
web/frontend/src/: App.tsx
web/frontend/src/components/: Auth.tsx  ConversationList.tsx  Transcript.tsx  UserAdmin.tsx  VoiceAdmin.tsx  VoiceChat.tsx
web/frontend/src/components/ui/: select.tsx
web/frontend/src/lib/: api.ts
